[gd_scene load_steps=3 format=3 uid="uid://dov0jf2guub8d"]

[ext_resource type="Script" path="res://ui/health_bar.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cr1wvckjypvhg" path="res://ui/health_unit.png" id="2_ojeu3"]

[node name="HealthBar" type="Control"]
custom_minimum_size = Vector2(5, 12)
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="EmptyHealth" type="TextureRect" parent="."]
modulate = Color(0.619608, 0.101961, 0.101961, 1)
layout_mode = 0
offset_right = 5.0
offset_bottom = 12.0
texture = ExtResource("2_ojeu3")
expand_mode = 1
stretch_mode = 1

[node name="FullHealth" type="TextureRect" parent="."]
modulate = Color(0.156863, 0.482353, 0.741176, 1)
layout_mode = 0
offset_right = 5.0
offset_bottom = 12.0
texture = ExtResource("2_ojeu3")
expand_mode = 1
stretch_mode = 1
